tests/interpreter/call-expression-arity-error2.stderr
error: expected 1 arguments, got 0
 --> $DIR/call-expression-arity-error2.lox:2:1
  |
2 | f();
  | ^^^
